made layout responsive

--- a/index.htm
+++ b/index.htm
@@ -6,9 +6,16 @@
   <link rel="stylesheet" href="css/main.css" />
 </head>
 <body>
-  <h1>Oliver Simon Lewis</h1>
+
+  <div class="headline cf">
+    <h1>Oliver <br>Simon <br>Lewis</h1>
+
+    <div class="profile-pic"></div>
+  </div>
+
   <h2>Personal Profile</h2>
-  <ul>
+
+  <ul class="profile-list">
       <li>Experienced, proactive and ambitious sales individual wanting to progress career in account management</li>
       <li>Highly motivated University graduate with a proven track record of delivering results and exceeding targets</li>
       <li>Friendly manner with persuasive and empathetic qualities, able to build rapport with customers and colleagues</li>
@@ -17,11 +24,12 @@
   </ul>
 
   <ul class="logo-list">
-      <li><img src="images/alcon.png" alt="Alcon logo" /></li>
-      <li><img src="images/dhl.jpg" alt="DHL logo" /></li>
-      <li><img src="images/bam.jpg" alt="Bam logo" /></li>
-      <li><img src="images/sea-world.jpg" alt="Sea World logo" /></li>
-      <li><img src="images/hp.jpg" alt="HP logo" /></li>
+      <li><img class="logo" src="images/alcon.png" alt="Alcon logo" /></li>
+      <li><img class="logo" src="images/dhl.jpg" alt="DHL logo" /></li>
+      <li><img class="logo" src="images/bam.jpg" alt="Bam logo" /></li>
+      <li><img class="logo" src="images/sea-world.jpg" alt="Sea World logo" /></li>
+      <li><img class="logo" src="images/hp.jpg" alt="HP logo" /></li>
   </ul>
+
  </body>
 </html>
