--- a/index.htm
+++ b/index.htm
@@ -13,7 +13,7 @@
     <div class="profile-pic"></div>
   </div>
 
-  <h2>Personal Profile</h2>
+  <h2>Personal profile</h2>
 
   <ul class="profile-list">
       <li>Experienced, proactive and ambitious sales individual wanting to progress career in account management</li>
@@ -30,6 +30,6 @@
       <li><img class="logo" src="images/sea-world.jpg" alt="Sea World logo" /></li>
       <li><img class="logo" src="images/hp.jpg" alt="HP logo" /></li>
   </ul>
-
+  <script src="/js/vendor/respond.min.js"></script>
  </body>
 </html>
