--- a/index.htm
+++ b/index.htm
@@ -1,35 +1,49 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Oliver Simon Lewis: Personal Profile</title>
-  <link rel="stylesheet" href="css/main.css" />
-</head>
-<body>
+    <head>
+        <meta charset="utf-8">
+        <title>Oliver Simon Lewis: Personal Profile</title>
+        <link rel="stylesheet" href="css/main.css" />
+    </head>
+    <body>
 
-  <div class="headline cf">
-    <h1>Oliver <br>Simon <br>Lewis</h1>
+        <div class="headline cf">
+            <h1>Oliver <br>Simon <br>Lewis</h1>
 
-    <div class="profile-pic"></div>
-  </div>
+            <div class="profile-pic"></div>
+        </div>
 
-  <h2>Personal profile</h2>
+        <h2>Personal profile</h2>
 
-  <ul class="profile-list">
-      <li>Experienced, proactive and ambitious sales individual wanting to progress career in account management</li>
-      <li>Highly motivated University graduate with a proven track record of delivering results and exceeding targets</li>
-      <li>Friendly manner with persuasive and empathetic qualities, able to build rapport with customers and colleagues</li>
-      <li>Honest, dependable and enthusiastic person, able to perform equally well autonomously or within a team</li>
-      <li>Confident when managing people, able to co-operate well with others via excellent communication skills</li>
-  </ul>
+        <ul class="profile-list">
+            <li>Experienced, proactive and ambitious sales individual wanting to progress career in account management</li>
+            <li>Highly motivated University graduate with a proven track record of delivering results and exceeding targets</li>
+            <li>Friendly manner with persuasive and empathetic qualities, able to build rapport with customers and colleagues</li>
+            <li>Honest, dependable and enthusiastic person, able to perform equally well autonomously or within a team</li>
+            <li>Confident when managing people, able to co-operate well with others via excellent communication skills</li>
+        </ul>
 
-  <ul class="logo-list">
-      <li><img class="logo" src="images/alcon.png" alt="Alcon logo" /></li>
-      <li><img class="logo" src="images/dhl.jpg" alt="DHL logo" /></li>
-      <li><img class="logo" src="images/bam.jpg" alt="Bam logo" /></li>
-      <li><img class="logo" src="images/sea-world.jpg" alt="Sea World logo" /></li>
-      <li><img class="logo" src="images/hp.jpg" alt="HP logo" /></li>
-  </ul>
-  <script src="/js/vendor/respond.min.js"></script>
- </body>
+
+        <ul class="social-list">
+            <li>
+                <a href="https://twitter.com/ollylewis" class="twitter-follow-button" data-show-count="false" data-dnt="true">Follow @ollylewis</a>
+                <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+            </li>
+            <li>
+                <a href="http://uk.linkedin.com/pub/ashley-lewis/43/a03/10a">
+                    <img src="http://www.linkedin.com/img/webpromo/btn_liprofile_blue_80x15.png" width="80" height="15" border="0" alt="View ashley lewis's profile on LinkedIn">
+                </a>
+            </li>
+        </ul>
+
+        <ul class="logo-list cf">
+            <li><img class="logo" src="images/alcon.png" alt="Alcon logo" /></li>
+            <li><img class="logo" src="images/dhl.jpg" alt="DHL logo" /></li>
+            <li><img class="logo" src="images/bam.jpg" alt="Bam logo" /></li>
+            <li><img class="logo" src="images/sea-world.jpg" alt="Sea World logo" /></li>
+            <li><img class="logo" src="images/hp.jpg" alt="HP logo" /></li>
+        </ul>
+
+        <script src="/js/vendor/respond.min.js"></script>
+    </body>
 </html>
