header fixed and font updated

--- a/index.htm
+++ b/index.htm
@@ -8,9 +8,13 @@
     <body>
 
         <div class="headline cf">
-            <h1>Oliver <br>Simon <br>Lewis</h1>
 
             <div class="profile-pic"></div>
+
+            <h1>Oliver <br>Simon <br>Lewis</h1>
+
+
+
         </div>
 
         <h2>Personal profile</h2>
@@ -44,6 +48,6 @@
             <li><img class="logo" src="images/hp.jpg" alt="HP logo" /></li>
         </ul>
 
-        <script src="/js/vendor/respond.min.js"></script>
+        <script src="js/vendor/respond.min.js"></script>
     </body>
 </html>
