- sprited logo imgages  - added email - removed twitter - updated linkedin

--- a/index.htm
+++ b/index.htm
@@ -13,8 +13,6 @@
 
             <h1>Oliver <br>Simon <br>Lewis</h1>
 
-
-
         </div>
 
         <h2>Personal profile</h2>
@@ -27,25 +25,32 @@
             <li>Confident when managing people, able to co-operate well with others via excellent communication skills</li>
         </ul>
 
+        <div class="organizations">
 
-        <ul class="social-list">
+            <p>I have worked in various sales and marketing roles within the below organizations across an array of industries and markets.</p>
+
+            <ul class="logo-list cf">
+                <li><i class="logo sprite-alcon"></i></li>
+                <li><i class="logo sprite-dhl"></i></li>
+                <li><i class="logo sprite-bam"></i></li>
+                <li><i class="logo sprite-sea-world"></i></li>
+                <li><i class="logo sprite-hp"></i></li>
+            </ul>
+
+        </div>
+
+         <ul class="social-list cf">
             <li>
-                <a href="https://twitter.com/ollylewis" class="twitter-follow-button" data-show-count="false" data-dnt="true">Follow @ollylewis</a>
-                <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-            </li>
-            <li>
-                <a href="http://uk.linkedin.com/pub/ashley-lewis/43/a03/10a">
-                    <img src="http://www.linkedin.com/img/webpromo/btn_liprofile_blue_80x15.png" width="80" height="15" border="0" alt="View ashley lewis's profile on LinkedIn">
+                Please email me directly:
+                <a class="email-link" href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#111;&#108;&#108;&#121;&#108;&#101;&#119;&#105;&#115;&#55;&#64;&#104;&#111;&#116;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;">
+                    &#111;&#108;&#108;&#121;&#108;&#101;&#119;&#105;&#115;&#55;&#64;&#104;&#111;&#116;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;
                 </a>
             </li>
-        </ul>
-
-        <ul class="logo-list cf">
-            <li><img class="logo" src="images/alcon.png" alt="Alcon logo" /></li>
-            <li><img class="logo" src="images/dhl.jpg" alt="DHL logo" /></li>
-            <li><img class="logo" src="images/bam.jpg" alt="Bam logo" /></li>
-            <li><img class="logo" src="images/sea-world.jpg" alt="Sea World logo" /></li>
-            <li><img class="logo" src="images/hp.jpg" alt="HP logo" /></li>
+            <li>
+                <a href="http://uk.linkedin.com/pub/oliver-lewis/a/137/371/">
+                    <img src="http://www.linkedin.com/img/webpromo/btn_myprofile_160x33.png" width="160" height="33" border="0" alt="View oliver lewis's profile on LinkedIn">
+                </a>
+            </li>
         </ul>
 
         <script src="js/vendor/respond.min.js"></script>
