-optimized images -compressed css -renamed assets

--- a/index.htm
+++ b/index.htm
@@ -1,18 +1,17 @@
 <!doctype html>
 <html lang="en">
+
     <head>
         <meta charset="utf-8">
         <title>Oliver Simon Lewis: Personal Profile</title>
-        <link rel="stylesheet" href="css/main.css" />
+        <link rel="stylesheet" href="css/main.min.css" />
     </head>
+
     <body>
 
         <div class="headline cf">
-
             <div class="profile-pic"></div>
-
             <h1>Oliver <br>Simon <br>Lewis</h1>
-
         </div>
 
         <h2>Personal profile</h2>
