updated footer link positioning due to lack of legacy support for last-of-type

--- a/index.htm
+++ b/index.htm
@@ -39,13 +39,13 @@
         </div>
 
          <ul class="social-list cf">
-            <li>
+            <li class="email">
                 Please email me directly:
                 <a class="email-link" href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#111;&#108;&#108;&#121;&#108;&#101;&#119;&#105;&#115;&#55;&#64;&#104;&#111;&#116;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;">
                     &#111;&#108;&#108;&#121;&#108;&#101;&#119;&#105;&#115;&#55;&#64;&#104;&#111;&#116;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;
                 </a>
             </li>
-            <li>
+            <li class="linkedin">
                 <a href="http://uk.linkedin.com/pub/oliver-lewis/a/137/371/">
                     <img src="http://www.linkedin.com/img/webpromo/btn_myprofile_160x33.png" width="160" height="33" border="0" alt="View oliver lewis's profile on LinkedIn">
                 </a>
