Update text and logos

--- a/index.htm
+++ b/index.htm
@@ -3,7 +3,8 @@
 
     <head>
         <meta charset="utf-8">
-        <title>Oliver Simon Lewis: Personal Profile</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1"/>
+        <title>Olly Lewis: Personal Profile</title>
         <link rel="stylesheet" href="css/main.min.css" />
     </head>
 
@@ -11,29 +12,33 @@
 
         <div class="headline cf">
             <div class="profile-pic"></div>
-            <h1>Oliver <br>Simon <br>Lewis</h1>
+            <h1>Olly <br>Lewis</h1>
         </div>
 
-        <h2>Personal profile</h2>
+        <h2>personal profile</h2>
 
-        <ul class="profile-list">
-            <li>Experienced, proactive and ambitious sales individual wanting to progress career in account management</li>
+        <ul class="profile-list">   
+            <li>Nine years front-line sales experience in account management and business development</li>
+            <li>Proactive and ambitious sales individual wanting to progress career to the next level</li>
             <li>Highly motivated University graduate with a proven track record of delivering results and exceeding targets</li>
-            <li>Friendly manner with persuasive and empathetic qualities, able to build rapport with customers and colleagues</li>
+            <li>Approachable with persuasive and empathetic qualities, able to build rapport with customers and colleagues</li>
             <li>Honest, dependable and enthusiastic person, able to perform equally well autonomously or within a team</li>
             <li>Confident when managing people, able to co-operate well with others via excellent communication skills</li>
         </ul>
 
         <div class="organizations">
 
-            <p>I have worked in various sales and marketing roles within the below organizations across an array of industries and markets.</p>
+            <p>I have excelled in sales and marketing roles within the below organisations, across a multitude of industries and markets.</p>
 
             <ul class="logo-list cf">
                 <li><i class="logo sprite-alcon"></i></li>
                 <li><i class="logo sprite-dhl"></i></li>
                 <li><i class="logo sprite-bam"></i></li>
                 <li><i class="logo sprite-sea-world"></i></li>
+                <li><i class="logo sprite-emirates"></i></li>
+                <li><i class="logo sprite-dubizzle"></i></li>
                 <li><i class="logo sprite-hp"></i></li>
+                <li><i class="logo sprite-sekari"></i></li>
             </ul>
 
         </div>
