--- a/index.htm
+++ b/index.htm
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <title>Olly Lewis: Personal Profile</title>
-        <link rel="stylesheet" href="css/main.min.css" />
+        <link rel="stylesheet" href="css/main.css" />
     </head>
 
     <body>
@@ -13,17 +13,20 @@
         <div class="headline cf">
             <div class="profile-pic"></div>
             <h1>Olly <br>Lewis</h1>
+            <p>Account Management &amp; Business Development</p>
         </div>
 
         <h2>personal profile</h2>
 
-        <ul class="profile-list">   
-            <li>Nine years front-line sales experience in account management and business development</li>
-            <li>Proactive and ambitious sales individual wanting to progress career to the next level</li>
+        <ul class="profile-list">
+            <li>Accomplished account manager with over a decade of frontline client-facing experience</li>
+            <li>Ability to excel by utilizing extensive experience, diverse skillset and solid knowledge base</li>
+            <li>Proactive, organized and ambitious individual, always striving to advance business and career forward</li>
             <li>Highly motivated University graduate with a proven track record of delivering results and exceeding targets</li>
-            <li>Approachable with persuasive and empathetic qualities, able to build rapport with customers and colleagues</li>
-            <li>Honest, dependable and enthusiastic person, able to perform equally well autonomously or within a team</li>
+            <li>Approachable with persuasive and empathetic qualities, able to build rapport with clients and colleagues</li>
+            <li>Honest, dependable and enthusiastic, able to perform equally well autonomously or within a team</li>
             <li>Confident when managing people, able to co-operate well with others via excellent communication skills</li>
+            
         </ul>
 
         <div class="organizations">
