--- a/index.htm
+++ b/index.htm
@@ -5,7 +5,24 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <title>Olly Lewis: Personal Profile</title>
-        <link rel="stylesheet" href="css/main.css" />
+        <link rel="stylesheet" href="css/main.min.css" />
+        <link rel="apple-touch-icon" sizes="57x57" href="/ollylewis.ico/apple-icon-57x57.png">
+        <link rel="apple-touch-icon" sizes="60x60" href="/ollylewis.ico/apple-icon-60x60.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="/ollylewis.ico/apple-icon-72x72.png">
+        <link rel="apple-touch-icon" sizes="76x76" href="/ollylewis.ico/apple-icon-76x76.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="/ollylewis.ico/apple-icon-114x114.png">
+        <link rel="apple-touch-icon" sizes="120x120" href="/ollylewis.ico/apple-icon-120x120.png">
+        <link rel="apple-touch-icon" sizes="144x144" href="/ollylewis.ico/apple-icon-144x144.png">
+        <link rel="apple-touch-icon" sizes="152x152" href="/ollylewis.ico/apple-icon-152x152.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="/ollylewis.ico/apple-icon-180x180.png">
+        <link rel="icon" type="image/png" sizes="192x192"  href="/ollylewis.ico/android-icon-192x192.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/ollylewis.ico/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="96x96" href="/ollylewis.ico/favicon-96x96.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/ollylewis.ico/favicon-16x16.png">
+        <link rel="manifest" href="/ollylewis.ico/manifest.json">
+        <meta name="msapplication-TileColor" content="#ffffff">
+        <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+        <meta name="theme-color" content="#ffffff">
     </head>
 
     <body>
@@ -34,14 +51,14 @@
             <p>I have excelled in sales and marketing roles within the below organisations, across a multitude of industries and markets.</p>
 
             <ul class="logo-list cf">
+                <li><i class="logo sprite-embed"></i></li>
+                <li><i class="logo sprite-emirates"></i></li>
+                <li><i class="logo sprite-dubizzle"></i></li>
                 <li><i class="logo sprite-alcon"></i></li>
                 <li><i class="logo sprite-dhl"></i></li>
                 <li><i class="logo sprite-bam"></i></li>
-                <li><i class="logo sprite-sea-world"></i></li>
-                <li><i class="logo sprite-emirates"></i></li>
-                <li><i class="logo sprite-dubizzle"></i></li>
+                <li><i class="logo sprite-sea-world"></i></li>   
                 <li><i class="logo sprite-hp"></i></li>
-                <li><i class="logo sprite-sekari"></i></li>
             </ul>
 
         </div>
