update page title and main image

--- a/index.htm
+++ b/index.htm
@@ -4,8 +4,8 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
-        <title>Olly Lewis: Personal Profile</title>
-        <link rel="stylesheet" href="css/main.min.css?v2" />
+        <title>Olly Lewis: Account Management &amp; Business Development</title>
+        <link rel="stylesheet" href="css/main.min.css?v3" />
         <link rel="apple-touch-icon" sizes="57x57" href="/ollylewis.ico/apple-icon-57x57.png">
         <link rel="apple-touch-icon" sizes="60x60" href="/ollylewis.ico/apple-icon-60x60.png">
         <link rel="apple-touch-icon" sizes="72x72" href="/ollylewis.ico/apple-icon-72x72.png">
