--- a/index.htm
+++ b/index.htm
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <title>Olly Lewis: Account Management &amp; Business Development</title>
-        <link rel="stylesheet" href="css/main.min.css?v3" />
+        <link rel="stylesheet" href="css/main.css?v1" />
         <link rel="apple-touch-icon" sizes="57x57" href="/ollylewis.ico/apple-icon-57x57.png">
         <link rel="apple-touch-icon" sizes="60x60" href="/ollylewis.ico/apple-icon-60x60.png">
         <link rel="apple-touch-icon" sizes="72x72" href="/ollylewis.ico/apple-icon-72x72.png">
@@ -33,7 +33,7 @@
             <p>Account Management &amp; Business Development</p>
         </div>
 
-        <h2>personal profile</h2>
+        <h2>Personal profile</h2>
 
         <ul class="profile-list">
             <li>Accomplished account manager with over a decade of frontline client-facing experience</li>
@@ -51,10 +51,10 @@
             <p>I have excelled in sales and marketing roles within the below organisations, across a multitude of industries and markets.</p>
 
             <ul class="logo-list cf">
-                <li><i class="logo sprite-embed"></i></li>
-                <li><i class="logo sprite-emirates"></i></li>
-                <li><i class="logo sprite-dubizzle"></i></li>
-                <li><i class="logo sprite-alcon"></i></li>
+                <li><i class="logo sprite-explorer" title="Explorer"></i></li>
+                <li><i class="logo sprite-embed" title="Embed"></i></li>
+                <li><i class="logo sprite-transguard-group" title="Emirates group security | Transguard group"></i></li>
+                <li><i class="logo sprite-dubizzle" title="Dubizzle"></i></li>
             </ul>
 
         </div>
