--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
-        <title>Olly Lewis: Account Management &amp; Business Development</title>
+        <title>Olly Lewis</title>
         <link rel="stylesheet" href="css/main.css?v1" />
         <link rel="apple-touch-icon" sizes="57x57" href="/ollylewis.ico/apple-icon-57x57.png">
         <link rel="apple-touch-icon" sizes="60x60" href="/ollylewis.ico/apple-icon-60x60.png">
@@ -30,25 +30,23 @@
         <div class="headline cf">
             <div class="profile-pic"></div>
             <h1>Olly <br>Lewis</h1>
-            <p>Account Management &amp; Business Development</p>
+            <p>Client Relationship Manager</p>
         </div>
 
-        <h2>Personal profile</h2>
+        <h2>Personal Profile</h2>
 
         <ul class="profile-list">
-            <li>Accomplished account manager with over a decade of frontline client-facing experience</li>
-            <li>Ability to excel by utilizing extensive experience, diverse skillset and solid knowledge base</li>
-            <li>Proactive, organized and ambitious individual, always striving to advance business and career forward</li>
-            <li>Highly motivated University graduate with a proven track record of delivering results and exceeding targets</li>
-            <li>Approachable with persuasive and empathetic qualities, able to build rapport with clients and colleagues</li>
-            <li>Honest, dependable and enthusiastic, able to perform equally well autonomously or within a team</li>
-            <li>Confident when managing people, able to co-operate well with others via excellent communication skills</li>
+            <li>Accomplished, disciplined, and proactive Client Relationship Manager with over 15 years of proven success in B2B environments</li>
+            <li>Possesses organisational acumen and commercial awareness, adding substantial value through the application of a diverse skill set and robust knowledge base</li>
+            <li>Confident and adept in collaboration, excelling in team management through effective communication</li>
+            <li>Customer-focused and results-oriented, consistently achieves objectives by executing activities at the highest standard</li>
+            <li>Bachelor’s degree in Business Studies</li>
             
         </ul>
 
         <div class="organizations">
 
-            <p>I have excelled in sales and marketing roles within the below organisations, across a multitude of industries and markets.</p>
+            <p>I have consistently demonstrated exceptional performance in account management and business development roles across various organisations, spanning a diverse range of industries and markets.</p>
 
             <ul class="logo-list cf">
                 <li><i class="logo sprite-explorer" title="Explorer"></i></li>
