--- a/index.htm
+++ b/index.htm
@@ -46,12 +46,12 @@
 
         <div class="organizations">
 
-            <p>I have consistently demonstrated exceptional performance in account management and business development roles across various organisations, spanning a diverse range of industries and markets.</p>
+            <p>Consistently demonstrated exceptional performance in account management and business development roles across various organisations, spanning a diverse range of industries and markets.</p>
 
             <ul class="logo-list cf">
-                <li><i class="logo sprite-explorer" title="Explorer"></i></li>
-                <li><i class="logo sprite-embed" title="Embed"></i></li>
-                <li><i class="logo sprite-transguard-group" title="Emirates group security | Transguard group"></i></li>
+                <li><i class="logo sprite-explorer" title="Explorer: Publishing | Mapping | Content"></i></li>
+                <li><i class="logo sprite-embed" title="EMBED"></i></li>
+                <li><i class="logo sprite-transguard-group" title="Emirates Group Security | Transguard Group"></i></li>
                 <li><i class="logo sprite-dubizzle" title="Dubizzle"></i></li>
             </ul>
 
